--- a/style.css
+++ b/style.css
@@ -35,16 +35,15 @@ form{
     height: fit-content;
     background-color: rgba(90, 94, 89, 0.13);
     position: absolute;
-    transform: translate(-50%,-50%);
-    border-radius: 10px;
-    bottom: 20%;
-    left: 20%;
-    right: 7%;
-    top: 120%;
-    backdrop-filter: blur(10px);
+    border-radius: 8px;
     border: 2px solid rgba(255,255,255,0.1);
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
     padding: 50px 35px;
+}
+
+img{
+    width: 34px;
+    height: 34px;
 }
 
 label{
@@ -58,7 +57,7 @@ input{
     color: black;
     margin-top: 2%;
     outline: none;
-    margin-bottom: 3%;
+    margin-bottom: 7%;
     border-radius: 24px;
     border: none;
 }
