--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h2{
 }
 
 p,ul{
-    font-family: monospace;
+    font-family: 'Rubik', sans-serif;
     font-size: 17px;
     color: azure;
 }
@@ -42,8 +42,8 @@ form{
 }
 
 img{
-    width: 34px;
-    height: 34px;
+    width: 334px;
+    height: 334px;
 }
 
 label{
@@ -64,6 +64,10 @@ input{
 
 button{
     width: fit-content;
+    font-weight: bold;
+    font-family: 'Rubik', sans-serif;
+    border-radius: 23px;
+    outline: none;
 }
 
 .usermsg{
